tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_qsystem_codegen@llvm14_4.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i1, i64, i1 } @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %lazy_measure = call i64 @___lazy_measure(i64 %0)
  call void @___qfree(i64 %0)
  %1 = insertvalue { i1, i64, i1 } { i1 true, i64 poison, i1 poison }, i64 %lazy_measure, 1
  ret { i1, i64, i1 } %1
}

declare i64 @___lazy_measure(i64)

declare void @___qfree(i64)
